--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
-    "jshint": "^2.12.0"
+    "jshint": "^2.12.0",
+    "postcss": "^8.1.4"
+  },
+  "peerDependencies": {
+    "postcss": "^8.0.0"
   }
 }
